# Plasma

./: CMakeLists.txt  vcpkg.json
.github/workflows/: ci.yml
Scripts/: CMakeLists.txt
Scripts/Ports/physx4/: portfile.cmake  vcpkg.json
Scripts/Ports/python3-cairosvg/: portfile.cmake  vcpkg.json
Scripts/Triplets/: arm64-windows-plasma.cmake  x64-windows-plasma.cmake  x86-windows-plasma.cmake
Sources/ModDLLs/: CMakeLists.txt
Sources/ModDLLs/inc/: plExternalCreatableIndex.h
Sources/ModDLLs/modConsoleCommander/: CMakeLists.txt  dllmain.cpp  pmConsoleCommander.cpp  pmConsoleCommander.h
Sources/ModDLLs/test/: CMakeLists.txt  dllmain.cpp  pmDebugMgr.cpp  pmDebugMgr.h
Sources/Plasma/Apps/: CMakeLists.txt
Sources/Plasma/Apps/plClient/: CMakeLists.txt  plClient.cpp  plClient.h  plClientLoader.cpp  plClientLoader.h  plClientWindow.h
Sources/Plasma/Apps/plCrashHandler/: CMakeLists.txt
Sources/Plasma/Apps/plFileEncrypt/: CMakeLists.txt
Sources/Plasma/Apps/plFileSecure/: CMakeLists.txt
Sources/Plasma/Apps/plGLClient/: CMakeLists.txt  plClientLoader.cpp  plClientLoader.h  plCreatables.cpp  plGLClient.cpp  plGLClient.h  plPythonFileModStub.cpp  plPythonFileModStub.h
Sources/Plasma/Apps/plGLClient/OSX/: PLSKeyboardEventMonitor.h  PLSKeyboardEventMonitor.mm  PLSView.h  PLSView.mm  main.mm
Sources/Plasma/Apps/plGLClient/Win32/: main.cpp
Sources/Plasma/Apps/plGLClient/X11/: main.cpp
Sources/Plasma/Apps/plPageInfo/: CMakeLists.txt
Sources/Plasma/Apps/plPageOptimizer/: CMakeLists.txt
Sources/Plasma/Apps/plPythonPack/: CMakeLists.txt
Sources/Plasma/Apps/plUruLauncher/: CMakeLists.txt
Sources/Plasma/CoreLib/: CMakeLists.txt  HeadSpin.cpp  HeadSpin.h  hsCpuID.cpp  hsDarwin.h  hsDarwin.mm  hsMac.h  hsMac.hpp  hsMac.mm  hsOptionalCall.h  plFileSystem.cpp
Sources/Plasma/FeatureLib/: CMakeLists.txt
Sources/Plasma/FeatureLib/pfAnimation/: CMakeLists.txt  pfAnimationCreatable.h  pfObjectFlocker.cpp  pfObjectFlocker.h  plLineFollowMod.cpp  plViewFaceModifier.cpp
Sources/Plasma/FeatureLib/pfAudio/: CMakeLists.txt  plListener.cpp
Sources/Plasma/FeatureLib/pfCamera/: plCameraBrain.cpp  plCameraModifier.cpp  plVirtualCamNeu.cpp
Sources/Plasma/FeatureLib/pfConsole/: pfAudioConsoleCommands.cpp  pfConsole.cpp  pfConsoleCommands.cpp  pfConsoleCommandsNet.cpp
Sources/Plasma/FeatureLib/pfDXPipeline/: plDXEnumerate.cpp  plDXEnumerate.h  plDXPipeline.cpp  plDXPipeline.h
Sources/Plasma/FeatureLib/pfDisplayHelpers/: plMacDisplayHelper.h  plWaylandDisplayHelper.h  plWinDisplayHelper.h  plX11DisplayHelper.h
Sources/Plasma/FeatureLib/pfGLPipeline/: CMakeLists.txt  pfCGLRenderLayer.cpp  pfCGLRenderLayer.h  pfCGLRenderLayer_Private.inl  plCGLDevice.cpp  plEGLDevice.cpp  plGLDevice.cpp  plGLDevice.h  plGLDeviceRef.h  plGLDeviceRefs.cpp  plGLEnumerate.cpp  plGLMaterialShaderRef.cpp  plGLPipeline.cpp  plGLPipeline.h  plGLPlateManager.cpp  plGLTextFont.cpp
Sources/Plasma/FeatureLib/pfGameGUIMgr/: CMakeLists.txt  pfGUICtrlGenerator.cpp
Sources/Plasma/FeatureLib/pfJournalBook/: pfJournalBook.cpp  pfJournalBook.h
Sources/Plasma/FeatureLib/pfLocalizationMgr/: CMakeLists.txt
Sources/Plasma/FeatureLib/pfMetalPipeline/: plMetalDevice.cpp  plMetalDevice.h  plMetalPipeline.cpp
Sources/Plasma/FeatureLib/pfMoviePlayer/: CMakeLists.txt
Sources/Plasma/FeatureLib/pfPasswordStore/: pfPasswordStore.cpp
Sources/Plasma/FeatureLib/pfPatcher/: CMakeLists.txt
Sources/Plasma/FeatureLib/pfPython/: plPythonParameter.h
Sources/Plasma/FeatureLib/pfSurface/: CMakeLists.txt  plLayerMovie.cpp  plLayerWebM.cpp  plLayerWebM.h
Sources/Plasma/NucleusLib/inc/: plCreatableIndex.h  plProfile.h
Sources/Plasma/NucleusLib/pnAsyncCore/: CMakeLists.txt
Sources/Plasma/NucleusLib/pnAsyncCoreExe/: CMakeLists.txt
Sources/Plasma/NucleusLib/pnEncryption/: CMakeLists.txt  plChecksum.cpp
Sources/Plasma/NucleusLib/pnGameMgr/: CMakeLists.txt
Sources/Plasma/NucleusLib/pnKeyedObject/: plKeyImp.cpp
Sources/Plasma/NucleusLib/pnMessage/: plClientMsg.h
Sources/Plasma/NucleusLib/pnNetCli/: CMakeLists.txt
Sources/Plasma/NucleusLib/pnNetProtocol/: CMakeLists.txt
Sources/Plasma/NucleusLib/pnSceneObject/: plSceneObject.cpp
Sources/Plasma/NucleusLib/pnUUID/: pnUUID_Unix.cpp
Sources/Plasma/NucleusLib/pnUtils/: CMakeLists.txt
Sources/Plasma/PubUtilLib/: CMakeLists.txt
Sources/Plasma/PubUtilLib/plAgeLoader/: plAgeLoader.cpp  plAgeLoader.h  plAgeLoaderCreatable.h  plAgeLoaderPaging.cpp  plResPatcher.cpp
Sources/Plasma/PubUtilLib/plAnimation/: plAGAnimInstance.cpp  plAGMasterMod.cpp  plScalarChannel.cpp
Sources/Plasma/PubUtilLib/plAudio/: CMakeLists.txt  plAudioSystem.cpp  plSound.cpp  (+2 more)
Sources/Plasma/PubUtilLib/plNetClient/: CMakeLists.txt  plLinkEffectsMgr.cpp  plNetCliAgeJoiner.cpp  plNetCliAgeJoiner.h  plNetCliAgeLeaver.cpp  plNetCliAgeLeaver.h  plNetClientCommInterface.cpp  plNetClientMgr.cpp  plNetClientMgr.h  plNetClientMgrLoad.cpp  plNetClientMgrSend.cpp  plNetClientMgrShow.cpp  plNetClientMgrVoice.cpp  plNetClientMsgHandler.cpp  plNetClientMsgScreener.cpp  plNetLinkingMgr.cpp
Sources/Plasma/PubUtilLib/plPipeline/: CMakeLists.txt  hsG3DDeviceSelector.cpp  hsG3DDeviceSelector.h  pl3DPipeline.cpp  pl3DPipeline.h  plDTProgressMgr.h  plPipelineCreatable.h  plPipelineViewSettings.cpp  plPipelineViewSettings.h  plPlateProgressMgr.cpp  plPlateProgressMgr.h  plPlates.cpp  plTextFont.cpp  plTransitionMgr.cpp
Sources/Plasma/PubUtilLib/plPipeline/DX/: plDXPipeline.cpp  plDXPipeline.h
Sources/Plasma/PubUtilLib/plPipeline/GL/: plGLConstants.h  plGLDevice.cpp  plGLDevice.h  plGLDeviceRef.h  plGLDeviceRefs.cpp  plGLMaterialShaderRef.cpp  plGLMaterialShaderRef.h  plGLPipeline.cpp  plGLPipeline.h  plGLPlateManager.cpp  plGLPlateManager.h  plShaderNode.cpp  plShaderNode.h
Sources/Plasma/PubUtilLib/plPipeline/GL/OSX/: eglCocoa.mm  eglCocoa_helpers.c  egl_api.c
Sources/Tests/: CMakeLists.txt
Sources/Tests/CoreTests/: test_hsDarwin_NS.mm
Sources/Tools/: CMakeLists.txt
Sources/Tools/plIniTest/: CMakeLists.txt  main.cpp
cmake/: FindPhysX.cmake  PlasmaTargets.cmake  VcpkgToolchain.cmake
(+79 files in other folders)
